# python-workshop-basico

./: README.md  basics.py  main.py  pyproject.toml
